another gce101 tweak

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <!--
-  NOTE: When deploying this page, the <title> tag must by set to one of
+  NOTE: When deploying this page, the title-tag must by set to one of
   instance1, instance2, instance3, or instance4 and _should_ match the
   short hostname of it's GCE instance. The page's background color will
   be updated onload based on it's hostname via javascript code below,
