dropping reload time to 500ms

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         document.body.style.backgroundColor = "white";
         bounce = false;
       }
-      // reload ourselves at the LB IP in 2 seconds
+      // reload ourselves at the LB IP in 1/2 second
       if (bounce && ip) {
-        setTimeout("window.location.href = 'http://"+ip+"/?lbip="+ip+"';", 2000);
+        setTimeout("window.location.href = 'http://"+ip+"/?lbip="+ip+"';", 500);
       }
     }
   </script>
